# parallelki

1/: CMakeLists.txt  README.md  main  main.cpp
